<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/galindo"
            android:text="@string/money_intro"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="72dp"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toTopOf="@+id/dollarBtn"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:src="@drawable/ic_dollar" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toTopOf="@+id/euroBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:src="@drawable/ic_euro" />


        <Button
            android:id="@+id/dollarBtn"
            android:layout_width="160dp"
            android:layout_height="57dp"

            android:layout_marginStart="24dp"
            android:layout_marginTop="388dp"
            android:fontFamily="sans-serif"
            android:text="@string/dollar"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/euroBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/infoUangBtn"
            android:layout_width="160dp"
            android:layout_height="57dp"

            android:layout_marginStart="124dp"
            android:layout_marginTop="492dp"
            android:layout_marginEnd="124dp"
            android:fontFamily="sans-serif"
            android:text="@string/info_uang"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/euroBtn"
            android:layout_width="160dp"
            android:layout_height="57dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="388dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="sans-serif"
            android:text="@string/euro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/dollarBtn"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>